[project]
name = "hotair"
version = "0.1.0"
description = "Execute purchased Steam games without using Valve user interface"
authors = [
    {name = "Radian LLC",email = "contact+hotair@radian.codes"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
